--- a/Practical 8.ipynb
+++ b/Practical 8.ipynb
@@ -1230,9 +1230,11 @@
     }
    ],
    "source": [
-    "tc = data.corr()\n",
-    "sns.heatmap(tc, cmap=\"YlGnBu\")\n",
-    "plt.title('Correlation')"
+    "tc = df.select_dtypes(include=['number']).corr()
+sns.heatmap(tc, cmap="YlGnBu")
+plt.title('Correlation')
+plt.show()
+"
    ]
   },
   {
